tests/out/error/array/magic_methods.out
tests/out/error/array/magic_methods.in.bt:3:7 error: type bool not matches i32 in argument 1
tests/out/error/array/magic_methods.in.bt:5:11 error: type i16 not matches i32 in argument 1
tests/out/error/array/magic_methods.in.bt:6:12 error: type []string not matches []i32 in argument 1
tests/out/error/array/magic_methods.in.bt:9:3 error: cannot assign type i32 to string
